--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_auth: ^4.7.2
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.4
+  firebase_storage: ^11.2.5
   flutter:
     sdk: flutter
 
