--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.4
   firebase_storage: ^11.2.5
+  provider: ^6.0.5
   flutter_svg: ^2.0.7
   flutter:
     sdk: flutter
