--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
-  firebase_auth: ^4.7.2
-  firebase_core: ^2.15.0
+  firebase_auth: ^4.8.0
+  firebase_core: ^2.15.1
   cloud_firestore: ^4.8.4
   firebase_storage: ^11.2.5
   provider: ^6.0.5
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.2
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
